@@ -91,5 +91,6 @@ HORAS TRABALHADAS: 5h
 
 - bugfixes
 - inclusao de metodo para persistencia nas alteracoes de um item do queue
+- integração com FCKEditor para edicao de item do queue 
 
-HORAS TRABALHADAS: 5h
+HORAS TRABALHADAS: 6h
